[fix] - todo button hover on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -96,5 +96,10 @@ body {
     width: 100vw;
     height: 400px;
   }
+
+  .todo-button:hover {
+    background-image: none;
+    cursor: pointer;
+  }
 }
 
